--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "clsx": "^1.2.1",
     "daisyui": "^2.41.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "moment": "^2.29.4",
     "next": "13.0.3",
     "prop-types": "^15.5.4",
     "react": "18.2.0",
