--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-icons": "^4.6.0",
     "react-wifi-indicator": "^1.0.1",
     "reactflow": "^11.2.0",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
